eks.tf
resource "aws_vpc" "k8svpc" {
    cidr_block = "192.168.0.0/16"
    
    tags = {
        Name = "k8svpc"
    }
}

resource "aws_internet_gateway" "k8svpc-igw" {
    vpc_id = aws_vpc.k8svpc.id

    tags = {
        Name = "k8svpc-igw"
    }
}

resource "aws_subnet" "private-us-east-1a" {
    vpc_id = aws_vpc.k8svpc.id
    cidr_block = "192.168.0.0/19"
    availability_zone = "us-east-1a"

    tags = {
        Name = "private-us-east-1a"
        "kubernetes.io/role/internal-elb" = "1"
        "kubernetes.io/cluster/demo" = "owned"
    }
}

resource "aws_subnet" "private-us-east-1b" {
    vpc_id = aws_vpc.k8svpc.id
    cidr_block = "192.168.32.0/19"
    availability_zone = "us-east-1b"

    tags = {
        Name = "private-us-east-1b"
        "kubernetes.io/role/internal-elb" = "1"
        "kubernetes.io/cluster/demo" = "owned"
    }
}

resource "aws_subnet" "public-us-east-1a" {
    vpc_id = aws_vpc.k8svpc.id
    cidr_block = "192.168.64.0/19"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

    tags = {
        Name = "public-us-east-1a"
        "kubernetes.io/role/elb" = "1" #this instruct the kubernetes to create public load balancer in these subnets
        "kubernetes.io/cluster/demo" = "owned"
    }
}

resource "aws_subnet" "public-us-east-1b" {
    vpc_id = aws_vpc.k8svpc.id
    cidr_block = "192.168.96.0/19"
    availability_zone = "us-east-1b"
    map_public_ip_on_launch = true

    tags = {
        Name = "public-us-east-1b"
        "kubernetes.io/role/elb" = "1" #this instruct the kubernetes to create public load balancer in these subnets
        "kubernetes.io/cluster/demo" = "owned"
    }
}

resource "aws_eip" "nat" {
    tags = {
        Name = "nat"
    }
}

resource "aws_nat_gateway" "k8s-nat" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public-us-east-1a.id

    tags = {
        Name = "k8s-nat"
    }

    depends_on = [aws_internet_gateway.k8svpc-igw]
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.k8svpc.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.k8s-nat.id
    }

    tags = {
        Name = "private"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.k8svpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.k8svpc-igw.id
    }

    tags = {
        Name = "public"
    }
}

resource "aws_route_table_association" "private-us-east-1a" {
    subnet_id = aws_subnet.private-us-east-1a.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-us-east-1b" {
    subnet_id = aws_subnet.private-us-east-1b.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public-us-east-1a" {
    subnet_id = aws_subnet.public-us-east-1a.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-us-east-1b" {
    subnet_id = aws_subnet.public-us-east-1b.id
    route_table_id = aws_route_table.public.id
}

resource "aws_iam_role" "demo" {
    name = "eks-cluster-demo"
    
    tags = {
        tag-key = "eks-cluster-demo"
    }

    assume_role_policy = <<POLICY
    {
    "Version": "2012-10-17",
    "Statement": [
        {
            "Effect": "Allow",
            "Principal": {
                "Service": [
                    "eks.amazonaws.com"
                ]
            },
            "Action": "sts:AssumeRole"
        }
    ]
    }
    POLICY
}

resource "aws_iam_role_policy_attachment" "demo-AmazonEKSClusterPolicy" {
    role = aws_iam_role.demo.name
    policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
}

resource "aws_eks_cluster" "demo" {
    name     = "demo"
    role_arn = aws_iam_role.demo.arn

    vpc_config {
        subnet_ids = [
            aws_subnet.private-us-east-1a.id,
            aws_subnet.private-us-east-1b.id,
            aws_subnet.public-us-east-1a.id,
            aws_subnet.public-us-east-1b.id
        ]
    }

    depends_on = [aws_iam_role_policy_attachment.demo-AmazonEKSClusterPolicy]
}

resource "aws_iam_role" "nodes" {
    name = "eks-node-group-nodes"

    assume_role_policy = jsonencode({
        Statement = [{
            Action = "sts:AssumeRole"
            Effect = "Allow"
            Principal = {
                Service = "ec2.amazonaws.com"
            }
        }]
        Version = "2012-10-17"
    })
}

resource "aws_iam_role_policy_attachment" "nodes-AmazonEKSWorkerNodePolicy" {
    policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
    role = aws_iam_role.nodes.name
}

resource "aws_iam_role_policy_attachment" "nodes-AmazonEKS_CNI_Policy" {
    policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
    role = aws_iam_role.nodes.name
}

resource "aws_iam_role_policy_attachment" "nodes-AmazonEC2ContainerRegistryReadOnly" {
    policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
    role = aws_iam_role.nodes.name
}

resource "aws_eks_node_group" "private-nodes" {
    cluster_name = aws_eks_cluster.demo.name
    node_group_name = "private-nodes"
    node_role_arn = aws_iam_role.nodes.arn

    subnet_ids = [
        aws_subnet.private-us-east-1a.id,
        aws_subnet.private-us-east-1b.id
    ]

    capacity_type = "ON_DEMAND"
    instance_types = ["t2.medium"]

    scaling_config {
        desired_size = 1
        max_size = 10
        min_size = 0
    }

    update_config {
        max_unavailable = 1
    }

    labels = {
        node = "kubenode02"
    }

    depends_on = [
        aws_iam_role_policy_attachment.nodes-AmazonEKSWorkerNodePolicy,
        aws_iam_role_policy_attachment.nodes-AmazonEKS_CNI_Policy,
        aws_iam_role_policy_attachment.nodes-AmazonEC2ContainerRegistryReadOnly,
    ]
}

# resource "aws_launch_template" "eks-with-disks" {
#     name = "eks-with-disks"
#     key_name = "local-provisioner"

#     block_device_mappings {
#         device_name = "/dev/xvdb"

#         ebs {
#             volume_size = 50
#             volume_type = "gp2"
#         }
#     }
# }

data "tls_certificate" "eks" {
    url = aws_eks_cluster.demo.identity[0].oidc[0].issuer
}

resource "aws_iam_openid_connect_provider" "eks" {
    client_id_list  = ["sts.amazonaws.com"]
    thumbprint_list = [data.tls_certificate.eks.certificates[0].sha1_fingerprint]
    url = aws_eks_cluster.demo.identity[0].oidc[0].issuer
}

data "aws_iam_policy_document" "eks_cluster_autoscaler_assume_role_policy" {
    statement {
        actions = ["sts:AssumeRoleWithWebIdentity"]
        effect  = "Allow"

        condition {
            test = "StringEquals"
            variable = "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub"
            values = ["system:serviceaccount:kube-system:cluster-autoscaler"]
        }

        principals {
            identifiers = [aws_iam_openid_connect_provider.eks.arn]
            type = "Federated"
        }
    }
}

resource "aws_iam_role" "eks_cluster_autoscaler" {
    assume_role_policy = data.aws_iam_policy_document.eks_cluster_autoscaler_assume_role_policy.json
    name = "eks-cluster-autoscaler"
}

resource "aws_iam_policy" "eks_cluster_autoscaler" {
    name = "eks-cluster-autoscaler"

    policy = jsonencode({
        Statement = [{
            Action = [
                "autoscaling:DescribeAutoScalingGroups",
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeLaunchConfigurations",
                "autoscaling:DescribeTags",
                "autoscaling:SetDesiredCapacity",
                "autoscaling:TerminateInstanceInAutoScalingGroup",
                "ec2:DescribeLaunchTemplateVersions"
            ]
            Effect   = "Allow"
            Resource = "*"
        }]
        Version = "2012-10-17"
    })
}

resource "aws_iam_role_policy_attachment" "eks_cluster_autoscaler_attach" {
    role = aws_iam_role.eks_cluster_autoscaler.name
    policy_arn = aws_iam_policy.eks_cluster_autoscaler.arn
}

output "eks_cluster_autoscaler_arn" {
    value = aws_iam_role.eks_cluster_autoscaler.arn
}
